--- a/Rough_book_for_practice.ipynb
+++ b/Rough_book_for_practice.ipynb
@@ -35,7 +35,7 @@
     }
    ],
    "source": [
-    "import this"
+    "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        import this"
    ]
   },
   {
@@ -3824,8 +3824,931 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "85294b44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst=['A',10,'B',20,'C',30,'D',40,'E',50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "05748b55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A', 10, 'B', 20, 'C', 30, 'D', 40, 'E', 50]\n",
+      "['A', 'B', 'C', 'D', 'E']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst=['A',10,'B',20,'C',30,'D',40,'E',50]\n",
+    "\n",
+    "print(lst)\n",
+    "\n",
+    "x = 1\n",
+    "\n",
+    "while x<len(lst):\n",
+    "    del lst[x]\n",
+    "    x+=1\n",
+    "    \n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8812595e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst=['A',10,100,'B',20,200,'C',30,300,'D',40,400,'E',50,500]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6c487fbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A', 10, 100, 'B', 20, 200, 'C', 30, 300, 'D', 40, 400, 'E', 50, 500]\n",
+      "['A', 10, 'B', 20, 'C', 30, 'D', 40, 'E', 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst=['A',10,100,'B',20,200,'C',30,300,'D',40,400,'E',50,500]\n",
+    "\n",
+    "i = 2\n",
+    "print(lst)\n",
+    "while i<len(lst):\n",
+    "    del lst[i]\n",
+    "    i+=2\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "075515d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def printing():\n",
+    "    print(\"We are doing study\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "bd184679",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We are doing study\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj = printing()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "434f9723",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Local Veriable : 200\n",
+      "Global Variable : 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=100\n",
+    "def display():\n",
+    "    a=200\n",
+    "    print('Local Veriable :',a)\n",
+    "    print('Global Variable :',globals()['a'])\n",
+    "    \n",
+    "display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1108d3ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "global a\n",
+    "a=100\n",
+    "def display1():\n",
+    "    a=200\n",
+    "    print('Local Veriable :',a)\n",
+    "    print('Global Variable :',a)\n",
+    "# def display2():\n",
+    "# #     global a\n",
+    "#     a=300\n",
+    "#     print('Local Veriable :',a)\n",
+    "#     print('Global Variable :',a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d54eb598",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Local Veriable : 200\n",
+      "Global Variable : 200\n"
+     ]
+    }
+   ],
+   "source": [
+    "display1()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "82b7f8b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "digvijay\n"
+     ]
+    }
+   ],
+   "source": [
+    "def dis(name):\n",
+    "    print(name)\n",
+    "    \n",
+    "dis('digvijay')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6512ae8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DIGVIJAY MOHITE FROM SANGLI MAHARASHATRA SELECTED AS DATA SCIENTIST\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_name = 'DIGVIJAY MOHITE FROM SANGLI MAHARASHATRA SELECTED AS DATA SCIENTIST'\n",
+    "dis(my_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fd1a7e75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add(a,b):\n",
+    "    c=a+b\n",
+    "    print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "77b33592",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "110\n"
+     ]
+    }
+   ],
+   "source": [
+    "add(10,100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6f896826",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add(a,b):\n",
+    "    c=a+b\n",
+    "    return c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c56f1d7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add(100,100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "98b22a9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter The Name :Abhimanyu\n",
+      "Enter The Surname :Mohite\n",
+      "Enter The Class :1\n",
+      "Enter The Rollnumber :41\n",
+      "****************************************************************************************************\n",
+      "Abhimanyu , Mohite , 1 , 41\n"
+     ]
+    }
+   ],
+   "source": [
+    "def stud_reg():\n",
+    "    fn=input('Enter The Name :')\n",
+    "    sn=input('Enter The Surname :')\n",
+    "    cl=input('Enter The Class :')\n",
+    "    rn=input('Enter The Rollnumber :')\n",
+    "    print('*'*100)\n",
+    "    print(fn,',',sn,',',cl,',',rn)\n",
+    "    \n",
+    "for i in range(1):\n",
+    "    stud_reg()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0a4a26ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def display(*letters):\n",
+    "    print('All the letters :',letters)\n",
+    "    print('Length of characters :',len(letters))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "1b8c437d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All the letters : ('CHATRAPATI SHIVAJI MAHARAJ KI JAY',)\n",
+      "Length of characters : 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "display('CHATRAPATI SHIVAJI MAHARAJ KI JAY')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a759ce00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add(a,b):\n",
+    "    c=a+b\n",
+    "    return c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "1ecb280d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "300"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add(100,200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ac8fea60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def display():\n",
+    "    print('My name is Digvijay')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "09226e93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Digvijay\n"
+     ]
+    }
+   ],
+   "source": [
+    "display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9a4d0856",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stud_record():\n",
+    "    fn=input('Enter the Name :')\n",
+    "    rn=input('Enter the roll number :')\n",
+    "    print('-'*100)\n",
+    "    print(fn,',',rn)\n",
+    "    print(';'*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fe71d535",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the Name :abhiamnyu\n",
+      "Enter the roll number :1\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "abhiamnyu , 1\n",
+      ";;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;\n"
+     ]
+    }
+   ],
+   "source": [
+    "stud_record()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "95b3c3b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the Name :Abhimanyu\n",
+      "Enter the roll number :41\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "Abhimanyu , 41\n",
+      ";;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;\n",
+      "Enter the Name :shourya\n",
+      "Enter the roll number :1\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "shourya , 1\n",
+      ";;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,3):\n",
+    "    stud_record()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "82d07197",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def display(*letter):\n",
+    "    print(letter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7f4b90dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('A', 'B', 'C', 'D')\n"
+     ]
+    }
+   ],
+   "source": [
+    "display('A','B','C','D')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d69fb1c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def childs(c1,c4,c2,c3):\n",
+    "    print('first youngest child is :',c4)\n",
+    "    print('second youngest child is :',c3)\n",
+    "    print('third youngest child is :',c2)\n",
+    "    print('fourth youngest child is :',c1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "58dda522",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first youngest child is : D\n",
+      "second youngest child is : C\n",
+      "third youngest child is : B\n",
+      "fourth youngest child is : A\n"
+     ]
+    }
+   ],
+   "source": [
+    "childs(c1='A',c3='C',c4='D',c2='B')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "401c7ad0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def display(**letters):\n",
+    "    for key, value in letters.items():\n",
+    "        print(f'{key}:{value}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "a3769dce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a:Abhimanyu\n",
+      "b:shourya\n",
+      "c:dipak\n",
+      "d:digvijay\n"
+     ]
+    }
+   ],
+   "source": [
+    "display(a='Abhimanyu',b='shourya',c='dipak',d='digvijay')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "bbaf5730",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def email(gmail='dlsmohite@gmail.com'):\n",
+    "    print('MY ID IS :',gmail)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "b3412ec3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MY ID IS : dipak@gmail.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "email('dipak@gmail.com')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "6cabc1b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MY ID IS : dlsmohite@gmail.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "email()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "d1c92d7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "126749"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "addition = lambda *a : sum(a)\n",
+    "addition(10,20,30,2,10,6,6,4,4,3,22,22,3,4,5,3,22,2,2,2,2,4,4,44,100,126353,44,4,4,4,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c175f270",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myfun(n):\n",
+    "    print('The value of n is :',n)\n",
+    "    return (lambda a:a*n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2234dfbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of n is : 10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.myfun.<locals>.<lambda>(a)>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfun(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "23b41c1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of n is : 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "otherfunction =myfun(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7705c7bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add = lambda *a : sum(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "02d0f8d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11941"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add(10,20,1111,3445,6677,678)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "27ddb44e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myfun(n):\n",
+    "    print('The value of n:',n)\n",
+    "    return (lambda a:a*n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "a872f8ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of n: 10\n",
+      "200\n"
+     ]
+    }
+   ],
+   "source": [
+    "other_fun = myfun(10)\n",
+    "print(other_fun(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "fc3e9d46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('bird', 5), ('cat', 20), ('dog', 50), ('fox', 10)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "animals = [('dog', 50), ('cat', 20), ('fox', 10), ('bird', 5)]\n",
+    "\n",
+    "# Sort animals by weight using lambda\n",
+    "animals.sort(key=lambda x: x[0])  \n",
+    "\n",
+    "print(animals)\n",
+    "\n",
+    "# Output\n",
+    "# [('bird', 5), ('fox', 10), ('cat', 20), ('dog', 50)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "b60e2ca6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "double = lambda a : a*2\n",
+    "triple = lambda a : a*3\n",
+    "\n",
+    "print(double(10))\n",
+    "print(triple(10))"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "dd1c4354",
+   "metadata": {},
+   "source": [
+    "[i for i in list1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "4341d686",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 5, 8, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = ['banana', 'mango', 'cococnut', 'chiku']\n",
+    "\n",
+    "print([len(fruit) for fruit in fruits])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "c3e806cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [1,2,3,4,5,6,7,8,9,10]\n",
+    "\n",
+    "print([[i*2 for i in lst]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "96248523",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "square = (lambda i:[i*2 for i in lst])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "3993c16f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "square(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "e0012007",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "757e6592",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([i for i in lst])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e41f980f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b01ffd8",
    "metadata": {},
    "outputs": [],
    "source": []
