--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -9657,6 +9657,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6a341acb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A', 10, 'B', 20, 'C', 30, 'D', 40, 'E', 50]\n",
+      "['A', 'B', 'C', 'D', 'E']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst=['A',10,'B',20,'C',30,'D',40,'E',50]\n",
+    "\n",
+    "print(lst)\n",
+    "\n",
+    "x = 1\n",
+    "\n",
+    "while x<len(lst):\n",
+    "    del lst[x]\n",
+    "    x+=1\n",
+    "    \n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "df427531",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A', 10, 100, 'B', 20, 200, 'C', 30, 300, 'D', 40, 400, 'E', 50, 500]\n",
+      "['A', 10, 'B', 20, 'C', 30, 'D', 40, 'E', 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst=['A',10,100,'B',20,200,'C',30,300,'D',40,400,'E',50,500]\n",
+    "\n",
+    "i = 2\n",
+    "print(lst)\n",
+    "while i<len(lst):\n",
+    "    del lst[i]\n",
+    "    i+=2\n",
+    "print(lst)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9b9cad0a-dd91-4f38-bf14-128887778c9c",
    "metadata": {},
@@ -9673,7 +9728,7 @@
     "\n",
     "Function is a block of statement which will get executed when we call that function (Function is block of code that performs a perticular task)\n",
     "\n",
-    "unless and untill when you call that function it will not perform perticular task\n"
+    "**unless and untill when you call that function it will not perform perticular task**\n"
    ]
   },
   {
@@ -9710,7 +9765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "a5bc55fb-b0d8-4203-b09c-dc45131e0d26",
    "metadata": {},
    "outputs": [
@@ -10052,7 +10107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "01617972",
    "metadata": {},
    "outputs": [
@@ -10060,7 +10115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This letter at 2nd loc is : ('A', 'B', 'C', 'D')\n",
+      "This letter are the : ('A', 'B', 'C', 'D')\n",
       "The letter at 2nd loc is : D\n"
      ]
     }
@@ -10071,7 +10126,7 @@
     "# \"*\": indicates we dont know the parameters\n",
     "\n",
     "def my_function(*letter):\n",
-    "    print(\"This letter at 2nd loc is :\",letter)\n",
+    "    print(\"This letter are the :\",letter)\n",
     "    print('The letter at 2nd loc is :',letter[3])\n",
     "    \n",
     "my_function('A','B','C','D')"
@@ -10504,6 +10559,28 @@
     "\n",
     "double=fun(2)\n",
     "print(double(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "22a58b79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "126749"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "addition = lambda *a : sum(a)\n",
+    "addition(10,20,30,2,10,6,6,4,4,3,22,22,3,4,5,3,22,2,2,2,2,4,4,44,100,126353,44,4,4,4,4)"
    ]
   },
   {
