--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -10681,7 +10681,8 @@
     "Features of OOP:\n",
     "1. Inheritance (data science purpose)\n",
     "2. Abstarction\n",
-    "3. Polymorphism"
+    "3. Polymorphism\n",
+    "4. Encapsulation"
    ]
   },
   {
@@ -10831,8 +10832,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "b85ab171",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class employee:\n",
+    "    def __init__(self,id_1, name_1, salary_1, mobile_1):\n",
+    "        self.id_1 = id_1\n",
+    "        self.name_1 = name_1\n",
+    "        self.salary_1 = salary_1\n",
+    "        self.mobile_1 = mobile_1\n",
+    "        \n",
+    "    def info(self):\n",
+    "        print('Employee details are :')\n",
+    "        print('ID :',self.id_1)\n",
+    "        print('Name :',self.name_1)\n",
+    "        print('Salary :',self.salary_1)\n",
+    "        print('Mobile :',self.mobile_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fc4ab50d",
    "metadata": {},
    "outputs": [
     {
@@ -10856,30 +10879,13 @@
     }
    ],
    "source": [
-    "class employee:\n",
-    "    def __init__(self,id_1, name_1, salary_1, mobile_1):\n",
-    "        self.id_1 = id_1\n",
-    "        self.name_1 = name_1\n",
-    "        self.salary_1 = salary_1\n",
-    "        self.mobile_1 = mobile_1\n",
-    "\n",
-    "o1 = employee(45,\"Rohit\",1050000, 123456789)       \n",
-    "        \n",
-    "print('Employee details are :')\n",
-    "print('ID :',o1.id_1)\n",
-    "print('Name :',o1.name_1)\n",
-    "print('Salary :',o1.salary_1)\n",
-    "print('Mobile :',o1.mobile_1)\n",
+    "o1 = employee(45,\"Rohit\",1050000, 123456789)   \n",
+    "o1.info()\n",
     "\n",
     "print('*'*100)\n",
     "\n",
-    "o2 = employee(18,\"Virat\",1150000, 987654321)      \n",
-    "        \n",
-    "print('Employee details are :')\n",
-    "print('ID :',o2.id_1)\n",
-    "print('Name :',o2.name_1)\n",
-    "print('Salary :',o2.salary_1)\n",
-    "print('Mobile :',o2.mobile_1)\n",
+    "o2 = employee(18,\"Virat\",1150000, 987654321)   \n",
+    "o2.info()\n",
     "\n",
     "print('*'*100)\n",
     "\n",
