--- a/Rough_book_for_practice.ipynb
+++ b/Rough_book_for_practice.ipynb
@@ -4739,16 +4739,506 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e41f980f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Student:\n",
+    "    fname = 'Digvijay'\n",
+    "    lname = 'Mohite'\n",
+    "    phone = 9175535381\n",
+    "    \n",
+    "    def display(self):\n",
+    "        print('Student Fitst Name :',self.fname)\n",
+    "        print('Student Last Name :',self.lname)\n",
+    "        print('Student Phone Number :',self.phone)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8b01ffd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student Fitst Name : Digvijay\n",
+      "Student Last Name : Mohite\n",
+      "Student Phone Number : 9175535381\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj1 = Student()\n",
+    "obj1.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2d9a06f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student Fitst Name : Dipak\n",
+      "Student Last Name : Jagdale\n",
+      "Student Phone Number : 123456789\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj2=Student()\n",
+    "obj2.fname = 'Dipak'\n",
+    "obj2.lname = 'Jagdale'\n",
+    "obj2.phone = 123456789\n",
+    "\n",
+    "obj2.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c77762c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Stud:\n",
+    "    name1= 'Digvijay'\n",
+    "    name2= 'Dipak'\n",
+    "    \n",
+    "    def display1(self):\n",
+    "        print('stud 1:',self.name1)\n",
+    "        \n",
+    "    def display2(self):\n",
+    "        print('stud 2:',self.name2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "72d0cc52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj=Stud()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ad0a7250",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Digvijay'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj.name1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "91133e66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Dipak'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj.name2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "5caeb7dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stud 1: Digvijay\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj.display1()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9bb1fcd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stud 2: Dipak\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj.display2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "3849dc74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Employee:\n",
+    "    ename = 'DIPAK'\n",
+    "    salary = 100000\n",
+    "    designation = 'ML Engineer'\n",
+    "    \n",
+    "    def info(self):\n",
+    "        print(self.ename, self.salary, self.designation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "020ef85b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e=Employee()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "cd635423",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'DIPAK'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e.ename"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "4eadff86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100000"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e.salary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "97a7bcc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ML Engineer'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e.designation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "80040c56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DIPAK 100000 ML Engineer\n"
+     ]
+    }
+   ],
+   "source": [
+    "e.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "aa0316cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d=Employee()\n",
+    "d.ename = 'Digvijay'\n",
+    "d.salary  = 900000\n",
+    "d.designation = 'ML eNGINEER'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "87d6633e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digvijay 900000 ML eNGINEER\n"
+     ]
+    }
+   ],
+   "source": [
+    "d.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "04534c9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Employee:\n",
+    "    ename = 'DIPAK'\n",
+    "    salary = 100000\n",
+    "    designation = 'ML Engineer'\n",
+    "    \n",
+    "    def __init__(self,aename,asalary,adesignation):\n",
+    "        self.ename = aename\n",
+    "        self.salary = asalary\n",
+    "        self.designation = adesignation\n",
+    "    \n",
+    "    def info(self):\n",
+    "        print(self.ename, self.salary, self.designation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "fd4ba0ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj = Employee()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "b138e1ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'DIPAK'"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj.ename"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "7c8bf4ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100000"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj.salary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "b8c70494",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DIPAK 100000 ML Engineer\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "287358ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abc = Employee()\n",
+    "abc.ename = 'ABHIMANYU'\n",
+    "abc.salary = 10000\n",
+    "abc.designation = 'TRANY'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "8dea543a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ABHIMANYU'"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abc.ename"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "592c6d8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABHIMANYU 10000 TRANY\n"
+     ]
+    }
+   ],
+   "source": [
+    "abc.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "62768cd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xyz = Employee('SHOURYA', 150000, 'STD')\n",
+    "dsm = Employee('ABHI', 9000, 'std' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "ee945b75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SHOURYA 150000 STD\n"
+     ]
+    }
+   ],
+   "source": [
+    "xyz.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "6578c271",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABHI 9000 std\n"
+     ]
+    }
+   ],
+   "source": [
+    "dsm.info()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b01ffd8",
+   "id": "c7d09b77",
    "metadata": {},
    "outputs": [],
    "source": []
